tests/ui/traits/object/incomplete-multiple-super-projection.stderr
error[E0119]: conflicting implementations of trait `Trait` for type `(dyn Dyn<(), ()> + 'static)`
  --> $DIR/incomplete-multiple-super-projection.rs:20:1
   |
LL | impl Trait for dyn Dyn<(), ()> {
   | ------------------------------ first implementation here
...
LL | impl<A, B> Trait for dyn Dyn<A, B> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `(dyn Dyn<(), ()> + 'static)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
